--- a/backend/translations/public/public.ua.json
+++ b/backend/translations/public/public.ua.json
@@ -258,7 +258,7 @@
           "lng": "21.0036713"
         },
         "phone": "+48 (12) 345-67-89",
-        "email": "info@relpen.pl",
+        "email": "relpenspzoo@gmail.com",
         "hours": "Пн-Пт: 9:00-18:00, Сб: 10:00-15:00"
       },
       "warehouse": {
@@ -274,7 +274,7 @@
       "support": {
         "title": "Технічна підтримка",
         "phone": "+48 (12) 345-67-90",
-        "email": "support@relpen.pl",
+        "email": "relpenspzoo@gmail.com",
         "telegram": "@relpen_support",
         "hours": "24/7 онлайн підтримка"
       },
@@ -424,7 +424,7 @@
           {
             "title": "6. Контакти",
             "description": "З усіх питань звертайтеся:",
-            "email": "Email: support@relpen.pl",
+            "email": "Email: relpenspzoo@gmail.com",
             "phone": "Телефон: +48 (12) 345-67-89",
             "address": "Адреса: Варшава, KIELECKA 41A / 8"
           }
@@ -496,7 +496,7 @@
           {
             "title": "6. Контакти",
             "description": "З усіх питань, пов'язаних з обробкою персональних даних, звертайтеся:",
-            "email": "Email: privacy@relpen.pl",
+            "email": "Email: relpenspzoo@gmail.com",
             "phone": "Телефон: +48 (12) 345-67-89",
             "address": "Адреса: Варшава, KIELECKA 41A / 8"
           }
@@ -621,7 +621,7 @@
       "hours_label": "Графік роботи",
       "address": "Варшава, KIELECKA 41A / 8",
       "phone": "+48 (12) 345-67-89",
-      "email": "info@relpen.pl",
+      "email": "relpenspzoo@gmail.com",
       "hours": "Пн-Пт: 9:00-18:00",
       "latitude": "52.2057584",
       "longitude": "21.0036713"
