--- a/backend/translations/public/public.pl.json
+++ b/backend/translations/public/public.pl.json
@@ -258,7 +258,7 @@
           "lng": "21.0036713"
         },
         "phone": "+48 (12) 345-67-89",
-        "email": "info@relpen.pl",
+        "email": "relpenspzoo@gmail.com",
         "hours": "Pn-Pt: 9:00-18:00, Sob: 10:00-15:00"
       },
       "warehouse": {
@@ -274,7 +274,7 @@
       "support": {
         "title": "Wsparcie techniczne",
         "phone": "+48 (12) 345-67-90",
-        "email": "support@relpen.pl",
+        "email": "relpenspzoo@gmail.com",
         "telegram": "@relpen_support",
         "hours": "24/7 wsparcie online"
       },
@@ -424,7 +424,7 @@
           {
             "title": "6. Kontakty",
             "description": "W przypadku wszelkich pytań kontaktuj się:",
-            "email": "Email: support@relpen.pl",
+            "email": "Email: relpenspzoo@gmail.com",
             "phone": "Telefon: +48 (12) 345-67-89",
             "address": "Adres: Warszawa, KIELECKA 41A / 8"
           }
@@ -496,7 +496,7 @@
           {
             "title": "6. Kontakty",
             "description": "W przypadku wszelkich pytań związanych z przetwarzaniem danych osobowych kontaktuj się:",
-            "email": "Email: privacy@relpen.pl",
+            "email": "Email: relpenspzoo@gmail.com",
             "phone": "Telefon: +48 (12) 345-67-89",
             "address": "Adres: Warszawa, KIELECKA 41A / 8"
           }
@@ -621,7 +621,7 @@
       "hours_label": "Godziny pracy",
       "address": "Warszawa, KIELECKA 41A / 8",
       "phone": "+48 (12) 345-67-89",
-      "email": "info@relpen.pl",
+      "email": "relpenspzoo@gmail.com",
       "hours": "Pn-Pt: 9:00-18:00",
       "latitude": "52.2057584",
       "longitude": "21.0036713"
