--- a/backend/translations/public/public.us.json
+++ b/backend/translations/public/public.us.json
@@ -258,7 +258,7 @@
           "lng": "21.0036713"
         },
         "phone": "+48 (12) 345-67-89",
-        "email": "info@relpen.pl",
+        "email": "relpenspzoo@gmail.com",
         "hours": "Mon-Fri: 9:00-18:00, Sat: 10:00-15:00"
       },
       "warehouse": {
@@ -274,7 +274,7 @@
       "support": {
         "title": "Technical Support",
         "phone": "+48 (12) 345-67-90",
-        "email": "support@relpen.pl",
+        "email": "relpenspzoo@gmail.com",
         "telegram": "@relpen_support",
         "hours": "24/7 Online Support"
       },
@@ -424,7 +424,7 @@
           {
             "title": "6. Contacts",
             "description": "For all questions, contact:",
-            "email": "Email: support@relpen.pl",
+            "email": "Email: relpenspzoo@gmail.com",
             "phone": "Phone: +48 (12) 345-67-89",
             "address": "Address: Warsaw, KIELECKA 41A / 8"
           }
@@ -496,7 +496,7 @@
           {
             "title": "6. Contacts",
             "description": "For all questions related to personal data processing, contact:",
-            "email": "Email: privacy@relpen.pl",
+            "email": "Email: relpenspzoo@gmail.com",
             "phone": "Phone: +48 (12) 345-67-89",
             "address": "Address: Warsaw, KIELECKA 41A / 8"
           }
@@ -621,7 +621,7 @@
       "hours_label": "Working Hours",
       "address": "Warsaw, KIELECKA 41A / 8",
       "phone": "+48 (12) 345-67-89",
-      "email": "info@relpen.pl",
+      "email": "relpenspzoo@gmail.com",
       "hours": "Mon-Fri: 9:00-18:00",
       "latitude": "52.2057584",
       "longitude": "21.0036713"
