--- a/backend/translations/public/public.ru.json
+++ b/backend/translations/public/public.ru.json
@@ -519,6 +519,17 @@
         "contact_for_order_url": "https://t.me/relpen_support_ru",
         "no_image": "Изображение отсутствует",
         "select_image": "Выбрать изображение"
+      },
+      "not_found": {
+        "back_to_products": "Назад к продуктам",
+        "title": "Продукт не найден",
+        "description": "К сожалению, запрашиваемый продукт не найден. Возможно, он был удален, перемещен или никогда не существовал.",
+        "browse_products": "Просмотреть продукты",
+        "go_home": "На главную",
+        "suggestions_title": "Что можно сделать:",
+        "suggestion_1": "Проверьте правильность ссылки на продукт",
+        "suggestion_2": "Вернитесь к списку продуктов и найдите нужный товар",
+        "suggestion_3": "Используйте поиск или фильтры для поиска похожих товаров"
       }
     },
     "products": {
@@ -563,6 +574,17 @@
         "contact_for_order": "Связаться для заказа",
         "price_negotiable": "Цена по договоренности",
         "contact_for_order_url": "https://t.me/relpen_support_ru"
+      },
+      "not_found": {
+        "back_to_services": "Назад к услугам",
+        "title": "Услуга не найдена",
+        "description": "К сожалению, запрашиваемая услуга не найдена. Возможно, она была удалена, перемещена или никогда не существовала.",
+        "browse_services": "Просмотреть услуги",
+        "go_home": "На главную",
+        "suggestions_title": "Что можно сделать:",
+        "suggestion_1": "Проверьте правильность ссылки на услугу",
+        "suggestion_2": "Вернитесь к списку услуг и найдите нужную услугу",
+        "suggestion_3": "Используйте поиск или фильтры для поиска похожих услуг"
       }
     },
     "services": {
