--- a/backend/translations/public/public.ua.json
+++ b/backend/translations/public/public.ua.json
@@ -515,6 +515,18 @@
         "contact_for_order_url": "https://t.me/relpen_support_ua",
         "no_image": "Зображення відсутнє",
         "select_image": "Вибрати зображення"
+      },
+      "not_found": {
+        "back_to_products": "Назад до продуктів",
+        "title": "Продукт не знайдено",
+        "description": "На жаль, запитуваний продукт не знайдено. Можливо, він був видалений, переміщений або ніколи не існував.",
+        "product_id": "ID продукту",
+        "browse_products": "Переглянути продукти",
+        "go_home": "На головну",
+        "suggestions_title": "Що можна зробити:",
+        "suggestion_1": "Перевірте правильність посилання на продукт",
+        "suggestion_2": "Поверніться до списку продуктів і знайдіть потрібний товар",
+        "suggestion_3": "Використовуйте пошук або фільтри для пошуку схожих товарів"
       }
     },
     "products": {
